--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "gif-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://msieroslawska.github.io/gif-search/",
   "dependencies": {
+    "axios": "0.22.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "1.0.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
@@ -10,18 +19,17 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "axios": "0.22.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.1.2",
-    "web-vitals": "1.0.1"
+    "@types/react-router-dom": "5.3.0",
+    "gh-pages": "3.2.3",
+    "typescript": "4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
